# ndp-auto-offload

./: .clang-format  .editorconfig  .gitignore  .gitmodules  LICENSE  README.MD
cmake/: CompilerWarnings.cmake
faasmspeed/: .gitignore  Cargo.toml  exp-grep4m.sh  exp-mixed0.sh  exp-pcakmm.sh  exp-sha256sum.sh  exp-substr4m.sh  exp-thumb1.sh  exp-thumb2.sh  exp-wiki4m.sh  experiments.sh  sexp-pcakmm.sh  sexp-substr4m.sh  sexp-thumb1.sh  sexp-wiki4m.sh
faasmspeed/graphs/: .gitignore  faasmspeed-frankenstein.Rmd  faasmspeed-grep.Rmd  faasmspeed-param.Rmd  faasmspeed-pcakmm.Rmd  faasmspeed-sha4m.Rmd  faasmspeed-thumb.Rmd  faasmspeed-wiki4M.Rmd  faasmspeed.Rmd  fields.txt  knitall.R  mixed-graphs.Rmd  tabulator.py
faasmspeed/src/: main.rs
faultspeed/: CMakeLists.txt  README.MD  conanfile.txt
faultspeed/src/: faultspeed.cpp
memspeed/: CMakeLists.txt  README.MD
memspeed-graphs/: analysis.Rmd  combined.json
memspeed/dpubin/: mramcopy.1.dpuelf  mramcopy.12.dpuelf  mramcopy.16.dpuelf  mramcopy.2.dpuelf  mramcopy.24.dpuelf  mramcopy.4.dpuelf  mramcopy.8.dpuelf  wramcopy.1.dpuelf  wramcopy.12.dpuelf  wramcopy.16.dpuelf  wramcopy.2.dpuelf  wramcopy.24.dpuelf  wramcopy.4.dpuelf  wramcopy.8.dpuelf  wramcopy.s
memspeed/dpusrc/: build.sh  cpucopy.c  cpucopy.dpuelf  mramcopy.c  ramcopy.c  ramcopy.dpuelf  ramcopy.s  wramcopy.c
memspeed/include/: dpuramcopy.h
memspeed/src/: benchmarks.cpp  cpuonly.cpp  memspeed.cpp  memspeed.h  upmemdpu.cpp
ndoffloadsim/: Cargo.toml
ndoffloadsim/src/: main.rs
pin-NearMAP/: .gitignore  NearMAP.cpp  makefile  makefile.rules  memory_access_summary.csv  run-on-spec.sh  simple_bench.sh  spec-modified-tests.txt  summarysebs.ods  summaryspec.ods  test_program.sh
pin-NearMAP/analyse-results/: Cargo.toml
pin-NearMAP/analyse-results/src/: main.rs
pin-NearMAP/stublib/: .gitignore  makefile  setup.py  stublib.c
pin-NearMAP/stublib/include/: stublib.h
pin-NearMAP/testprogram/: makefile  testprogram  testprogram.cpp
statmon/: Cargo.toml  Dockerfile
statmon/src/: cpustat.rs  eventstat.rs  iostat.rs  main.rs  stats.rs
