[package]
name = "faasmspeed"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "time", "io-util"] }
argh = "0.1"
anyhow = "1"
num-traits = "0.2.14"
itertools = "0.10"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
